2009-09-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c:
   Remove more unused code.


2009-08-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Remove unused code.


2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/scplugin.c, src/speller.c:
   Use single header includes.
   Use the global version macro to set the plugin's version.


2009-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Fix compilation with GTK < 2.16.


2009-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, po/geanyspellcheck.pot:
   Prefix the gettext package with "geany" to avoid possible
   naming conflicts.


2009-05-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/scplugin.c, src/gui.h:
   Update the label of the "Default" menu item if the default language
   has been changed.
 * src/speller.c:
   Update Pascal styles as they changed in Scintilla.


2009-05-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Fix broken menu item "Default".


2009-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/scplugin.c, src/gui.h:
   List the available languages in the Tools menu as radio items
   to easily indicate which language is currently in use.
   Show the default language also next to the 'Default' menu item.
   Show the currently used language in the toolbutton tooltip.


2009-03-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * New release: Spell Check 0.3.


2009-02-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Revert back the changes to use the "editor-notify" signal as it
   makes things worse than before. Instead use the old code to connect
   to the global "key-press-event" signal but reduce the delay
   to half a second to make checking while typing smoother.

